# Rcode

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.spec/plan/20260712-v0.1-skeleton-protocol/: 00-index.md  03-implementation-plan.md  05-integration-test-plan.md  07-docs-update-plan.md  08-commit.md
.spec/plan/20260712-v0.2-agent-loop/: 00-index.md  03-implementation-plan.md  07-docs-update-plan.md  08-commit.md
.spec/plan/20260712-v0.3-tool-extension/: 01-requirements.md  04-unit-test-plan.md  05-integration-test-plan.md  06-code-review-report.md  08-commit.md
.spec/plan/20260712-v01-skeleton-protocol/: 01-requirements.md  02-design.md  04-unit-test-plan.md  (+1 more)
.traces/: run_1784036095_11075694.jsonl  run_1784036095_7a898e2a.jsonl  run_1784036437_0404d09c.jsonl  run_1784036437_e32dcd6f.jsonl  run_1784037153_9273de9a.jsonl  run_1784037153_d1906e98.jsonl  run_1784038034_084b7934.jsonl  run_1784038034_500b4db6.jsonl
docs/: DESIGN.md
docs/api/: llm.md  tools.md
docs/architecture/: directory-structure.md  event-system.md  ipc-protocol.md  tool-system.md
docs/changelog/: v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.md
tests/: conftest.py
tests/integration/: test_agent_events.py  test_agent_run.py  test_file_tools.py  test_ipc.py  test_trace.py  test_v071_session.py  test_v072_compact.py  test_v075_config.py
tests/unit/: test_app.py  test_cli.py  test_commands.py  test_config.py  test_context.py  test_envelope.py  test_events.py  test_logging.py  test_runner.py
(+175 files in other folders)
